Minor bug-fixes

--- a/Desktop_GUI/GUI/gui_resources/attributes.properties
+++ b/Desktop_GUI/GUI/gui_resources/attributes.properties
@@ -29,12 +29,13 @@ GUI_Car.Image.Pattern.Zebra=Zebra.png
 
 GUI_Field.Default_Description=description
 GUI_Field.Default_Picture=default
-GUI_Field.Default_Rent=Rent
+GUI_Field.Default_Rent=Leje: 
 GUI_Field.Default_SubText=subText
 GUI_Field.Default_title=Title
 
 GUI_Field.Label.Chance=?
 GUI_Field.Label.owns=Ejes af: 
+GUI_Field.Label.rent=Leje: 
 
 
 Error.Conflict.PlayerName=Name conflict: [%s]. Name stay unchanged!
