--- a/Desktop_GUI/GUI/gui_resources/attributes.properties
+++ b/Desktop_GUI/GUI/gui_resources/attributes.properties
@@ -36,6 +36,8 @@ GUI_Field.Default_title=Title
 GUI_Field.Label.Chance=?
 GUI_Field.Label.owns=Ejes af: 
 GUI_Field.Label.rent=Leje: 
+GUI_Field.Label.Chance.Format = ?
+GUI_Field.Label.Chance.Subtext = Prøv lykken
 
 
 Error.Conflict.PlayerName=Name conflict: [%s]. Name stay unchanged!
