--- a/Desktop_GUI/pom.xml
+++ b/Desktop_GUI/pom.xml
@@ -2,14 +2,14 @@
   <modelVersion>4.0.0</modelVersion>
   <groupId>diplomitdtu</groupId>
   <artifactId>matadorgui</artifactId>
-  <version>1.0.0</version>
+  <version>3.0.1</version>
   <packaging>jar</packaging>
   
   <properties>
     <!-- github server corresponds to entry in ~/.m2/settings.xml -->
     <github.global.server>github</github.global.server>
 </properties>
-  
+  <!-- Target for local maven compilation -->
   <distributionManagement>
     <repository>
         <id>internal.repo</id>
@@ -28,6 +28,7 @@
       </resource>
     </resources>
     <plugins>
+    <!-- plugin for maven artifact compilation -->
     <plugin>
         <artifactId>maven-deploy-plugin</artifactId>
         <version>2.8.1</version>
@@ -35,7 +36,7 @@
                <altDeploymentRepository>internal.repo::default::file://${project.build.directory}/mvn-repo</altDeploymentRepository>
         </configuration>
     </plugin>
-    
+    <!-- plugin to commit to github -->
     <plugin>
          <groupId>com.github.github</groupId>
          <artifactId>site-maven-plugin</artifactId>
