--- a/Desktop_GUI/pom.xml
+++ b/Desktop_GUI/pom.xml
@@ -2,7 +2,7 @@
   <modelVersion>4.0.0</modelVersion>
   <groupId>diplomitdtu</groupId>
   <artifactId>matadorgui</artifactId>
-  <version>3.1.5RC1</version>
+  <version>3.1.5</version>
   <packaging>jar</packaging>
   
   <properties>
