--- a/pom.xml
+++ b/pom.xml
@@ -39,6 +39,12 @@
             <version>3.2.0</version>
             <type>maven-plugin</type>
         </dependency>
+        <dependency>
+            <groupId>org.jetbrains</groupId>
+            <artifactId>annotations</artifactId>
+            <version>RELEASE</version>
+            <scope>compile</scope>
+        </dependency>
     </dependencies>
 
     <build>
