Move resources to resource folder

--- a/src/main/resources/attributes.properties
+++ b/src/main/resources/attributes.properties
@@ -1,7 +1,7 @@
 GUI_Board.Title=Matador
 
 
-Image.Path=/gui_resources/
+Image.Path=/resources/
 GUI_Board.Dice=Dice.png
 GUI_Field.Image.Cones=Cones.jpg
 GUI_Field.Image.Ferry1=Ferry1.jpg
