--- a/src/main/resources/attributes.properties
+++ b/src/main/resources/attributes.properties
@@ -1,43 +1,43 @@
-GUI_Board.Title=Matador
+Board.Title=Matador
 
 
 Image.Path=/resources/
-GUI_Board.Dice=Dice.png
-GUI_Field.Image.Cones=Cones.jpg
-GUI_Field.Image.Ferry1=Ferry1.jpg
-GUI_Field.Image.Ferry2=Ferry2.jpg
-GUI_Field.Image.Ferry3=Ferry3.jpg
-GUI_Field.Image.Ferry4=Ferry4.jpg
-GUI_Field.Image.Brewery1=Brewery1.jpg
-GUI_Field.Image.Brewery2=Brewery2.jpg
-GUI_Field.Image.GoToJail=GoToJail.jpg
-GUI_Field.Image.Jail=Jail.jpg
+Board.Dice=Dice.png
+Field.Image.Cones=Cones.jpg
+Field.Image.Ferry1=Ferry1.jpg
+Field.Image.Ferry2=Ferry2.jpg
+Field.Image.Ferry3=Ferry3.jpg
+Field.Image.Ferry4=Ferry4.jpg
+Field.Image.Brewery1=Brewery1.jpg
+Field.Image.Brewery2=Brewery2.jpg
+Field.Image.GoToJail=GoToJail.jpg
+Field.Image.Jail=Jail.jpg
 
-GUI_Field.Image.House1=House1.png
-GUI_Field.Image.House2=House2.png
-GUI_Field.Image.House3=House3.png
-GUI_Field.Image.House4=House4.png
-GUI_Field.Image.Hotel=Hotel.png
-GUI_Field.Image.Luck_small=Prøv lykken small.png
-GUI_Field.Image.Luck=Prøv lykken.png
+Field.Image.House1=House1.png
+Field.Image.House2=House2.png
+Field.Image.House3=House3.png
+Field.Image.House4=House4.png
+Field.Image.Hotel=Hotel.png
+Field.Image.Luck_small=Prøv lykken small.png
+Field.Image.Luck=Prøv lykken.png
 
-GUI_Car.Image=cars.png
-GUI_Car.Image.Pattern.Diagonal_Dual_Color=Diag_dual.png
-GUI_Car.Image.Pattern.Dotted=Dotted.png
-GUI_Car.Image.Pattern.Checkered=Checkered.png
-GUI_Car.Image.Pattern.Zebra=Zebra.png
+Car.Image=cars.png
+Car.Image.Pattern.Diagonal_Dual_Color=Diag_dual.png
+Car.Image.Pattern.Dotted=Dotted.png
+Car.Image.Pattern.Checkered=Checkered.png
+Car.Image.Pattern.Zebra=Zebra.png
 
-GUI_Field.Default_Description=description
-GUI_Field.Default_Picture=default
-GUI_Field.Default_Rent=Leje: 
-GUI_Field.Default_SubText=subText
-GUI_Field.Default_title=Title
+Field.Default_Description=description
+Field.Default_Picture=default
+Field.Default_Rent=Leje: 
+Field.Default_SubText=subText
+Field.Default_title=Title
 
-GUI_Field.Label.Chance=?
-GUI_Field.Label.owns=Ejes af: 
-GUI_Field.Label.rent=Leje: 
-GUI_Field.Label.Chance.Format = ?
-GUI_Field.Label.Chance.Subtext = Prøv lykken
+Field.Label.Chance=?
+Field.Label.owns=Ejes af: 
+Field.Label.rent=Leje: 
+Field.Label.Chance.Format = ?
+Field.Label.Chance.Subtext = Prøv lykken
 
 
 Error.Conflict.PlayerName=Name conflict: [%s]. Name stay unchanged!
