Move classes to new structure
And change how the attributes work

--- a/src/main/resources/attributes.properties
+++ b/src/main/resources/attributes.properties
@@ -4,22 +4,14 @@ Board.Title=Matador
 Image.Path=/resources/
 Board.Dice=Dice.png
 Field.Image.Cones=Cones.jpg
-Field.Image.Ferry1=Ferry1.jpg
-Field.Image.Ferry2=Ferry2.jpg
-Field.Image.Ferry3=Ferry3.jpg
-Field.Image.Ferry4=Ferry4.jpg
-Field.Image.Brewery1=Brewery1.jpg
-Field.Image.Brewery2=Brewery2.jpg
+Field.Image.Ferry=Ferry1.jpg,Ferry2.jpg,Ferry3.jpg,Ferry4.jpg
+Field.Image.Brewery=Brewery1.jpg,Brewery2.jpg
 Field.Image.GoToJail=GoToJail.jpg
 Field.Image.Jail=Jail.jpg
 
-Field.Image.House1=House1.png
-Field.Image.House2=House2.png
-Field.Image.House3=House3.png
-Field.Image.House4=House4.png
+Field.Image.House=House1.png,House2.png,House3.png,House4.png
 Field.Image.Hotel=Hotel.png
-Field.Image.Luck_small=Prøv lykken small.png
-Field.Image.Luck=Prøv lykken.png
+Field.Image.Luck=Prøv lykken.png,Prøv lykken small.png
 
 Car.Image=cars.png
 Car.Image.Pattern.Diagonal_Dual_Color=Diag_dual.png
@@ -29,13 +21,12 @@ Car.Image.Pattern.Zebra=Zebra.png
 
 Field.Default_Description=description
 Field.Default_Picture=default
-Field.Default_Rent=Leje: 
+Field.Default_Rent="Leje: "
 Field.Default_SubText=subText
 Field.Default_title=Title
 
-Field.Label.Chance=?
-Field.Label.owns=Ejes af: 
-Field.Label.rent=Leje: 
+Field.Label.owns="Ejes af: "
+Field.Label.rent="Leje: "
 Field.Label.Chance.Format = ?
 Field.Label.Chance.Subtext = Prøv lykken
 
